name:                aeson-no-tc
version:             0.1.0.0
synopsis:            Pairing exercise
description:         Use Aeson without type classes
license:             MIT
license-file:        LICENSE
author:              Eduphoria!
maintainer:          dev@eduphoria.net
build-type:          Simple
cabal-version:       >=1.10

executable aeson-no-tc
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , aeson-qq
                     , bytestring
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts=-N
  --ghc-options:         -Wall -threaded -with-rtsopts=-N -prof -osuf p_o -auto-all -caf-all -with-rtsopts=-xc